# Github-Store

./: build.gradle.kts  generate-manifest.js  sample-manifest.json  settings.gradle.kts
.claude/: settings.local.json
build-logic/convention/: build.gradle.kts
composeApp/: build.gradle.kts
core/data/: build.gradle.kts
core/domain/: build.gradle.kts
core/presentation/: build.gradle.kts
feature/apps/data/: build.gradle.kts
feature/apps/domain/: build.gradle.kts
feature/apps/presentation/: build.gradle.kts
feature/details/data/: build.gradle.kts
feature/details/domain/: build.gradle.kts
feature/home/data/: build.gradle.kts
qt/: CMakeLists.txt  ComponentManager.pro  README.md  resources.qrc
qt/qml/: main.qml
qt/qml/components/: ActionButton.qml  AppDropdown.qml  ComponentCard.qml  IconImage.qml  InfoRow.qml  MaterialIcon.qml  PriceBadge.qml  SearchField.qml  SidebarCategory.qml  TagChip.qml  ThemeColorSelector.qml
qt/qml/screens/: DetailsScreen.qml  FavoritesScreen.qml  HomeScreen.qml  InstallSuccessScreen.qml  InstalledAppsScreen.qml  ManualInstallScreen.qml  SearchScreen.qml  SettingsScreen.qml
qt/qml/singletons/: CMTheme.qml  qmldir
qt/resources/: Products.json  bundled-manifest.json  resources.qrc
qt/scripts/: merge-manifest.js
qt/src/: main.cpp
qt/src/cpp/: AppController.cpp  AppController.h  NativeDropHandler.cpp  NativeDropHandler.h  WindowsDnDFix.cpp  WindowsDnDFix.h
qt/src/cpp/data/: Component.h  DownloadProgress.h
qt/src/cpp/managers/: DownloadManager.cpp  DownloadManager.h  DragDropManager.cpp  DragDropManager.h  InstallManager.cpp  InstallManager.h  JsonStorage.cpp  JsonStorage.h  ManifestManager.cpp  ManifestManager.h  SettingsManager.cpp  SettingsManager.h
qt/src/cpp/models/: CategoryModel.cpp  CategoryModel.h  ComponentModel.cpp  ComponentModel.h
qt/src/cpp/services/: AppLauncher.cpp  AppLauncher.h  ElevatedCopyHelper.cpp  ElevatedCopyHelper.h  FileLocations.cpp  FileLocations.h  ProcessChecker.cpp  ProcessChecker.h
test-dnd/: TestDnD.java  TestDnD.kt  run-test.bat
(+129 files in other folders)
